# llm-tool-selection

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: llm.py
specs/: build-tool-selection.md
src/llmtoolselection/: cli.py
src/llmtoolselection/agents/: tool_calling.py
src/llmtoolselection/tools/: get_weather.yaml
tests/: test_tool_calling.py
