[project]
name = "llm-tool-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.106.0",
    "python-dotenv>=1.1.1",
    "langchain>=0.2.6",
    "langchain-openai>=0.1.19",
    "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
